sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: missing arguments for method setValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
			setValeur(j) = getValeur(j-1);
                        ^AlgInsertionSort:13: error: missing arguments for method setValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
		setValeur(j) = v;
                ^